# psychsim

./: .gitignore  CLAUDE.md  PIPELINE_OUTPUT.txt  README.md  project.py  psychsim_server.py  psychsim_ui.html  pyproject.toml  run_clock_demo.py  run_pipeline.py  run_tests.py  run_townlife_demo.py  run_visual_demo.py  run_watch_demo.py  sync.sh  town_life.html
core/: agent_bank.py  arena.py  arena_view.py  parallel_world.py  scan.py  scan_match.py  scan_search.py
docs/: ARCHITECTURE.md  CEl_discrimination_preregistration.md  Emotional_Expression_Master_Reference.md  Episodic_Memory_Master_Reference.md  NEURAL_CIRCUIT_MASTER_DOCUMENT.md  PASTE_TO_CLAUDE_CODE_learning_pathways.md  PSYCHSIM_MASTER_DOCUMENT_v8.md  PsychSim_ARCHITECTURE.md  PsychSim_Aggression_Keystone_Ruling.md  PsychSim_Allen_Audit_Step6.md  PsychSim_Arena_UI.md  PsychSim_Attribution_Corrected_HarshMirror_Order.md  PsychSim_AuditoryChannel_CloseOut.md  PsychSim_Auditory_Clearance.md  PsychSim_Batching_FailureMode_Ruling.md  PsychSim_CORE_RECORD.md  PsychSim_CU_Section9_Decision_Brief.md  PsychSim_CU_Study_Spec.md  PsychSim_CU_readout_fixed_and_acting_readiness.md  PsychSim_Calibration_Validation_Plan.md  PsychSim_CeL_CRF_Population_Ruling.md  PsychSim_D4_Reframe_LearningSystems.md  PsychSim_D6_Audit_Reconciled.md  PsychSim_D6_Closeout_BuildInstructions.md  PsychSim_D6_DefensiveDrive_Diagnostic.md  PsychSim_D6_DefensiveDrive_Grounded.md  PsychSim_D6_Door1_Verdict_Corrected.md  PsychSim_D6_InputSurface_LumpCensus_Audit.md  PsychSim_D6_Item2_Entailment_Spec.md  PsychSim_D6_LC_Afferent_Build_Ruling.md  (+173 more)
(+286 files in other folders)
